Improved Makefile. Use command line options to make start address configurable. Switched to suffix rule for compiling a C1P program.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,6 +5,14 @@ AS   = $(CC65BINDIR)/ca65
 LD   = $(CC65BINDIR)/ld65
 C1P65 = $(CC65BINDIR)/c1p65
 
-hello.c1p: hello.c ../../cc65/lib/c1p.lib
-	$(CL) -t c1p hello.c
-	$(C1P65) hello
+STARTADDR = 0x300
+
+.SUFFIXES: .c1p
+
+C1PTARGETS = hello.c1p minimal.c1p
+
+all: $(C1PTARGETS)
+
+.c.c1p:
+	$(CL) --start-addr $(STARTADDR) --mapfile $(basename $<).map -vm -t c1p $<
+	$(C1P65) -S $(STARTADDR) $(basename $<)
