Add example for building for 8 kB RAM.

--- a/src/Makefile
+++ b/src/Makefile
@@ -23,9 +23,14 @@ STARTADDR = 0x200
 
 .SUFFIXES: .c1p
 
-C1PTARGETS = hello.c1p minimal.c1p misctest.c1p asmonly.c1p Eliza.c1p
+C1PTARGETS = hello.c1p hello8k.c1p minimal.c1p misctest.c1p asmonly.c1p Eliza.c1p
 
 all: $(C1PTARGETS)
+
+# Link program for 8 kB RAM by defining __HIMEM__ symbol
+hello8k.c1p: hello.c
+	$(CL) $(CFLAGS) --start-addr $(STARTADDR) -Wl -D,__HIMEM__=$$2000 --mapfile hello8k.map -vm -t c1p $<
+	$(SREC_CAT) $(basename $<) -binary -offset $(STARTADDR) -o hello8k.c1p -Ohio_Scientific -execution-start-address=$(STARTADDR)
 
 $(C1PTARGETS): $(CC65LIBDIR)/c1p.lib
 
